# OpenCausality

./: .env.example  .gitignore  INVARIANTS.md  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  acic_loader.py  dgp_benchmarks.py  harness.py
config/: model_spec.yaml  settings.py
config/agentic/: README.md  agent_permissions.yaml  confirmation_freeze.yaml  dag_schema.yaml  data_tiers.yaml  design_registry.yaml  diagnostic_registry.yaml  hitl_actions.yaml  hitl_triggers.yaml  issue_gates.yaml  issue_registry.yaml  patch_policy.yaml  promotion_rules.yaml  query_modes.yaml
data/backup/: manifest.json
data/crosswalks/: regions.csv
data/metadata/: README.md  cpi_categories.yaml  datasets.yaml  download_status.json
data/processed/: credit_panel_monthly_2024.csv  credit_panel_monthly_full.csv  nbk_credit_historical.csv  nbk_credit_monthly_2024.csv
docs/: AGENTIC_SYSTEM.md  CAUSAL_CHAIN_ANALYSIS.md  DATA_QUALITY_REPORT.md  DATA_SOURCES.md  FRAMEWORK_ANALYSIS.md  MODEL_INTERPRETATION.md  STUDY_DOCUMENTATION.md
examples/: kaspi_narrative.txt
notebooks/: 01_data_exploration.py
outputs/: estimation_results.md  fx_passthrough_block_f_spending_response.md
outputs/adapter_run/: .notification.json  COMPARISON_REPORT.md  hitl_checklist.md
outputs/agentic/: .notification.json  DATA_INVENTORY.md  KSPI_K2_DAG_RUN_REPORT.md  KSPI_K2_REAL_ESTIMATION_REPORT.md  PIPELINE_COMPARISON.md  README.md  REPORT_CONSISTENCY_CHECK.md  dag_visualization.html  dag_viz_full.html  dag_viz_narrative.html  hitl_checklist.md  hitl_panel.html
outputs/e2e_test/: .notification.json  hitl_checklist.md  hitl_panel.html
outputs/manual_baseline/: KSPI_K2_REAL_ESTIMATION_REPORT.md
outputs/nl_pipeline/: .notification.json  COMPARISON_VS_MANUAL.md  hitl_checklist.md  kspi_k2_narrative.yaml
paper/: arxiv_abstract.txt  extra_pkgs.tex  main.aux  main.bbl  main.out  main.tex  references.bib
scripts/: __init__.py  build_dag_viz.py  build_hitl_panel.py  cli.py  compare_runs.py  download_all_data.py  enrich_hitl_text.py  generate_narrative_dag.py  query_repl.py  run_analysis.py  run_data_scout.py  run_real_estimation.py  run_test_estimation.py
scripts/agent_loops/: agent_loop.sh  datascout_loop.sh  estimator_loop.sh  judge_loop.sh  modelsmith_loop.sh  run_agent_round.sh
scripts/codex_loop/: codex_estimation_loop.sh  codex_objective.txt  codex_resume.md  control.sh  healing_objective.txt
shared/: __init__.py
shared/agentic/: __init__.py  agent_loop.py  artifact_store.py  falsification.py  propagation.py  query_mode.py  report_checker.py  ts_guard.py  validation.py
shared/data/: __init__.py  api_tools.py  arxiv.py  base.py  bns_cpi_categories.py  (+16 more)
specs/: auto_dag.txt  auto_dag_elaboration.txt  identification_fix.txt  time_series_fix.txt
src/: cli.py
studies/: __init__.py
tests/: test_adapter_dispatch.py  test_agent_loop.py  test_agentic.py  test_annas_archive.py  test_benchmarks.py  test_discovery_agent.py  test_dml_adapters.py  test_dowhy_adapters.py  test_graph_convert.py  test_integration_pipeline.py  test_issue_patchbot.py  test_iv_did_adapters.py  test_llm_providers.py  test_narrative_dag_fixes.py  test_panel_data.py  test_panel_fe_adapter.py  test_paper_parser.py  test_pipeline_smoke.py  test_rdd_adapter.py  test_regression_kink_adapter.py  test_shift_share.py  test_simulator.py  test_synth_control_adapter.py
(+637 files in other folders)
