[project]
name = "kazakhstan-welfare-model"
version = "0.1.0"
description = "Causal econometric model for Kazakhstan household welfare analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Research Team"}
]

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "httpx>=0.25.0",
    "fredapi>=0.5.0",
    "linearmodels>=6.0",
    "statsmodels>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "diskcache>=5.6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]

[project.scripts]
kzwelfare = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
