[project]
name = "opencausality"
version = "0.3.0"
description = "Open-source platform for causal inference at scale"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Research Team"}
]

dependencies = [
    # Data handling
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    # HTTP clients
    "httpx>=0.25.0",
    # External data sources
    "fredapi>=0.5.0",
    # Econometrics
    "linearmodels>=6.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    # Database (for credit default study)
    "sqlalchemy>=2.0.0",
    # Web scraping
    "beautifulsoup4>=4.12.0",
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Caching
    "diskcache>=5.6.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    # YAML parsing
    "pyyaml>=6.0.0",
    # LLM
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]

litellm = ["litellm>=1.0.0"]
rdd = [
    # RDD estimation (optional, install separately if needed)
    # "rdrobust>=1.0.0",  # May require R installation
]

[project.scripts]
# Unified CLI
opencausality = "scripts.cli:app"
# Study-specific CLIs
kzwelfare = "studies.household_welfare.src.cli:app"
kzcredit = "studies.credit_default.src.cli:app"
kzkaspi = "studies.kaspi_holdco.src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "studies", "scripts", "config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "studies/*/tests"]
addopts = "-v --cov=shared --cov=studies --cov-report=term-missing"
